[tool.poetry]
name = "coding-challenges"
version = "0.1.0"
description = ""
authors = ["Adam Owada <adamowada@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest-watch = "^4.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^19.10b0", allow-prereleases = true}
pylint = "^2.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
